@@ -53,7 +53,7 @@ all:			$(TARGETS)
 install:		$(TARGETS)
 		install -o root -g root -m 755 -d $(lib_dir) $(man1_dir) $(man8_dir)
 		install -o root -g root -m 755 -s authbind $(bin_dir)/.
-		install -o root -g root -m 755 $(LIBTARGET) $(lib_dir)/.
+		install -o root -g root -m 644 $(LIBTARGET) $(lib_dir)/.
 		strip --strip-unneeded $(lib_dir)/$(LIBTARGET)
 		ln -sf $(LIBTARGET) $(lib_dir)/$(LIBCANON)
 		install -o root -g root -m 4755 -s helper $(lib_dir)/.
