@@ -37,7 +37,7 @@ clean:
 	rm -f debian/*~ debian/#*# debian/core debian/*.bak
 
 binary-indep:   checkroot build
-        $(checkdir)
+	$(checkdir)
 # There are no architecture-independent files to be uploaded
 # generated by this package.  If there were any they would be
 # made here.
@@ -51,9 +51,9 @@ binary-arch:	checkroot build
 		debian/tmp/usr/{bin,lib/$(package),man}
 	$(MAKE) prefix=debian/tmp/usr etc_dir=debian/tmp/etc/authbind \
 		man_dir=debian/tmp/usr/man  install install_man
-	install -g root -o root -m 644 debian/copyright $(udp)/.
 	install -g root -o root -m 644 debian/changelog $(udp)/changelog.Debian
 	gzip -9 debian/tmp/usr/man/man*/* $(udp)/*
+	install -g root -o root -m 644 debian/copyright $(udp)/.
 	install -g root -o root -m 755 debian/postrm debian/tmp/DEBIAN
 ifneq ($(arch),alpha)
 	install -g root -o root -m 644 debian/shlibs debian/tmp/DEBIAN
